src/main/kotlin/com/example/planificador/error/exception/NotAuthorizedException.kt
package com.example.planificador.error.exception

class NotAuthorizedException(message: String) : Exception("Not Authorized Exception (401). $message") {
}